--- a/Transactions Microservice/Transactions Microservice.yaml
+++ b/Transactions Microservice/Transactions Microservice.yaml
@@ -1,33 +1,33 @@
 ﻿apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: transactions_microservice-deployment
+  name: transactionsmicroservice-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: Transactions_Microservice
+      app: Transactionsmicroservice
   template:
     metadata:
       labels:
-        app: Transactions_Microservice
+        app: Transactionsmicroservice
     spec:
       containers:
-      - name: transactions_microservicerepos
-        image: retail_banking_system_cr.azurecr.io/transactions_microservicerepos:latest
+      - name: transactionsmicroservicerepos
+        image: anujretailbankingcr.azurecr.io/transactionsmicroservicerepos:latest
         ports:
         - containerPort: 8080
       imagePullSecrets:
-      - name: dsconfigsn
+      - name: dsconfigsn2
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: transactions_microservice
+  name: transactionsmicroservice
 spec:
   type: LoadBalancer
   ports:
   - port: 80
   selector:
-    app: Transactions_Microservice
+    app: Transactionsmicroservice
